refactored and optimized the calculator
